Fix find-in-page "1 of 0" bug.

This patch enabled FindRequestManager to update the active match ordinal
properly when all matches are dynamically removed from the page between
subsequent find requests.

BUG=707798

Review-Url: https://codereview.chromium.org/2790213002
Cr-Commit-Position: refs/heads/master@{#461522}

Former-commit-id: 0f4e7a51e872861c59e466cbb498caa4ea54b808